integrate R-Commons frontend prototype as separate module alongside WSS (#102)
* integrate R-Commons frontend prototype as separate module alongside WSS

* fix make a delivery button

* update readme

---------

Authored-by: Kayla <imbrialk@bc.edu>