@@ -10,8 +10,20 @@ group = 'com.vanatta.helene'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs(['--enable-preview'])
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs(['--enable-preview'])
 }
 
 repositories {
@@ -39,6 +51,7 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql:42.7.4'
 
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.assertj:assertj-core:3.26.3'
 }
